--- a/scribo/app.qrc
+++ b/scribo/app.qrc
@@ -21,5 +21,7 @@
         <file>img/flushLeft.png</file>
         <file>img/flushRight.png</file>
         <file>img/justification.png</file>
+        <file>img/color.png</file>
+        <file>img/font.png</file>
     </qresource>
 </RCC>
