--- a/scribo/preference.ui
+++ b/scribo/preference.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>456</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>240</y>
+     <y>400</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -35,11 +35,11 @@
      <x>60</x>
      <y>40</y>
      <width>261</width>
-     <height>161</height>
+     <height>341</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -48,10 +48,10 @@
     <widget class="QWidget" name="gridLayoutWidget">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>49</x>
        <y>20</y>
-       <width>160</width>
-       <height>80</height>
+       <width>161</width>
+       <height>128</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout">
@@ -62,18 +62,90 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_marginTop"/>
+      </item>
       <item row="0" column="0">
+       <widget class="QLabel" name="label_preference_marginTop">
+        <property name="text">
+         <string>Top margin</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_marginLeft"/>
+      </item>
+      <item row="3" column="0">
        <widget class="QLabel" name="label_preference_marginLeft">
         <property name="text">
          <string>Left margin</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QSpinBox" name="spinBox_preference_marginLeft"/>
-      </item>
       <item row="1" column="1">
        <widget class="QSpinBox" name="spinBox_preference_marginRight"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_preference_marginBottom">
+        <property name="text">
+         <string>Bottom margin</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_marginBottom"/>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="gridLayoutWidget_2">
+     <property name="geometry">
+      <rect>
+       <x>49</x>
+       <y>160</y>
+       <width>161</width>
+       <height>131</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_preference_paddingTop">
+        <property name="text">
+         <string>Top Padding</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_preference_paddingBottom">
+        <property name="text">
+         <string>Bottom padding</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_preference_paddingRight">
+        <property name="text">
+         <string>Right padding</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_preference_paddingLeft">
+        <property name="text">
+         <string>Left padding</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_paddingTop"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_paddingRight"/>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_paddingBottom"/>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="spinBox_preference_paddingLeft"/>
       </item>
      </layout>
     </widget>
