--- a/scribo/app.qrc
+++ b/scribo/app.qrc
@@ -25,5 +25,6 @@
         <file>img/font.png</file>
         <file>img/decryption.png</file>
         <file>img/encryption.png</file>
+        <file>img/image.png</file>
     </qresource>
 </RCC>
