--- a/scribo/mainwindow.ui
+++ b/scribo/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>809</width>
+    <width>864</width>
     <height>502</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <rect>
       <x>20</x>
       <y>10</y>
-      <width>771</width>
+      <width>821</width>
       <height>381</height>
      </rect>
     </property>
@@ -30,7 +30,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>809</width>
+     <width>864</width>
      <height>22</height>
     </rect>
    </property>
@@ -43,6 +43,8 @@
     <addaction name="separator"/>
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
+    <addaction name="separator"/>
+    <addaction name="actionPrint"/>
     <addaction name="separator"/>
     <addaction name="actionClose"/>
    </widget>
@@ -119,6 +121,8 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionPrint"/>
+   <addaction name="separator"/>
    <addaction name="actionNormal"/>
    <addaction name="actionBold"/>
    <addaction name="actionItalic"/>
@@ -410,6 +414,18 @@
    </property>
    <property name="text">
     <string>Image</string>
+   </property>
+  </action>
+  <action name="actionPrint">
+   <property name="icon">
+    <iconset resource="app.qrc">
+     <normaloff>:/img/printer.png</normaloff>:/img/printer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Print</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+P</string>
    </property>
   </action>
  </widget>
