--- a/scribo/app.qrc
+++ b/scribo/app.qrc
@@ -28,5 +28,6 @@
         <file>img/image.png</file>
         <file>img/printer.png</file>
         <file>img/splash.jpg</file>
+        <file>img/banner.jpg</file>
     </qresource>
 </RCC>
