Add i18n and documentation configuration

--- a/scribo/mainwindow.ui
+++ b/scribo/mainwindow.ui
@@ -262,6 +262,9 @@
    <property name="text">
     <string>About</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::AboutRole</enum>
+   </property>
   </action>
   <action name="actionSettings">
    <property name="icon">
@@ -271,6 +274,9 @@
    <property name="text">
     <string>Preferences</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::PreferencesRole</enum>
+   </property>
   </action>
   <action name="actionClose">
    <property name="icon">
@@ -279,6 +285,9 @@
    </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::QuitRole</enum>
    </property>
   </action>
   <action name="actionBold">
