--- a/scribo/app.qrc
+++ b/scribo/app.qrc
@@ -32,5 +32,6 @@
         <file>img/pause.png</file>
         <file>img/play.png</file>
         <file>img/stop.png</file>
+        <file>translations/scribo_de.qm</file>
     </qresource>
 </RCC>
