--- a/scribo/update.ui
+++ b/scribo/update.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>75</height>
+    <width>445</width>
+    <height>92</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,7 @@
   <property name="styleSheet">
    <string notr="true">#label_update_status {
 	font-weight: bold;
+	width: 100px;
 }</string>
   </property>
   <widget class="QLabel" name="label_update_status">
@@ -23,8 +24,8 @@
     <rect>
      <x>30</x>
      <y>20</y>
-     <width>331</width>
-     <height>16</height>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -34,8 +35,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>40</y>
+     <x>330</x>
+     <y>50</y>
      <width>81</width>
      <height>32</height>
     </rect>
